--- a/test-data/test-etree.yml
+++ b/test-data/test-etree.yml
@@ -2,21 +2,21 @@
   main: |
     from lxml import etree
     document = etree.fromstring("<doc></doc>")
-    reveal_type(document)  # N: Revealed type is "lxml.etree._Element"
+    reveal_type(document)  # NR: .+ "[\w\.]+\._Element"$
 
 - case: etree_xmlparser_makeelement
   main: |
     from lxml import etree
     parser = etree.XMLParser()
     element = parser.makeelement("foobar")
-    reveal_type(element)  # N: Revealed type is "lxml.etree._Element"
+    reveal_type(element)  # NR: .+ "[\w\.]+\._Element"$
 
 - case: etree_htmlparser_makeelement
   main: |
     from lxml import etree
     parser = etree.HTMLParser()
     element = parser.makeelement("foobar")
-    reveal_type(element)  # N: Revealed type is "lxml.etree._Element"
+    reveal_type(element)  # NR: .+ "[\w\.]+\._Element"$
 
 - case: etree_tostring_encoding_default_or_type
   parametrized:
@@ -49,13 +49,13 @@
   main: |
     from lxml import etree
     document = etree.HTML("<doc></doc>", parser=etree.HTMLParser(), base_url="http://example.com/")
-    reveal_type(document)  # N: Revealed type is "lxml.etree._Element"
+    reveal_type(document)  # NR: .+ "[\w\.]+\._Element"$
 
 - case: etree_XML_returns_element
   main: |
     from lxml import etree
     document = etree.XML("<doc></doc>", parser=etree.XMLParser(), base_url="http://example.com/")
-    reveal_type(document)  # N: Revealed type is "lxml.etree._Element"
+    reveal_type(document)  # NR: .+ "[\w\.]+\._Element"$
 
 - case: qname_create_ok
   parametrized:
@@ -70,7 +70,7 @@
     el: _Element
     qn: QName
     result = QName({{ kwds }})
-    reveal_type(result)  # N: Revealed type is "lxml.etree.QName"
+    reveal_type(result)  # NR: .+ "[\w\.]+\.QName"$
 
 - case: qname_create_fail
   expect_fail: true
