Impl lxml.isoschematron, add minimal superclass tests

--- a/test-data/test-validator.yml
+++ b/test-data/test-validator.yml
@@ -1,3 +1,18 @@
+- case: include_file
+  skip: true
+  files: &INC
+    - path: inc.py
+      content: |
+        from lxml import etree
+        from lxml.isoschematron import Schematron
+        rng: etree.RelaxNG
+        dtd: etree.DTD
+        schema: etree.XMLSchema
+        tron: Schematron
+        tree: etree._ElementTree[etree._Element]
+        elem: etree._Element
+  main: null
+
 - case: xmlschema_create
   parametrized:
     - args: elem
@@ -92,99 +107,51 @@
     root: _Element
     rng = RelaxNG{{#is_method}}.from_rnc_string{{/is_method}}({{ args }})
 
-# This test includes __call__(), which is the underlying
-# mechanism used by validate() method
 - case: superclass_validate_method
+  files: *INC
   parametrized:
     - obj: rng
-      args: tree
-      is_call: false
-    - obj: rng
-      args: etree=elem
-      is_call: false
-    - obj: rng
-      args: elem
-      is_call: true
-    - obj: rng
-      args: etree=tree
-      is_call: true
     - obj: dtd
-      args: tree
-      is_call: false
-    - obj: dtd
-      args: etree=elem
-      is_call: false
-    - obj: dtd
-      args: elem
-      is_call: true
-    - obj: dtd
-      args: etree=tree
-      is_call: true
     - obj: schema
-      args: tree
-      is_call: false
-    - obj: schema
-      args: etree=elem
-      is_call: false
-    - obj: schema
-      args: elem
-      is_call: true
-    - obj: schema
-      args: etree=tree
-      is_call: true
+    - obj: tron
   main: |
-    from lxml import etree
-    rng: etree.RelaxNG
-    dtd: etree.DTD
-    schema: etree.XMLSchema
-    tree: etree._ElementTree[etree._Element]
-    elem: etree._Element
-    reveal_type({{ obj }}{{^is_call}}.validate{{/is_call}}({{ args }}))  # N: Revealed type is "builtins.bool"
+    from inc import rng, dtd, schema, tron, tree, elem
+    reveal_type({{ obj }}(tree))  # NR: .+ "[\w\.]+\.bool"$
+    reveal_type({{ obj }}(etree=elem))  # NR: .+ "[\w\.]+\.bool"$
+    reveal_type({{ obj }}.validate(elem))  # NR: .+ "[\w\.]+\.bool"$
+    reveal_type({{ obj }}.validate(etree=tree))  # NR: .+ "[\w\.]+\.bool"$
 
-# This test includes __call__(), which is the underlying
-# mechanism used by validate() method
 - case: superclass_validate_method_badarg
+  files: *INC
   parametrized:
     - obj: rng
       cls: RelaxNG
       is_call: true
     - obj: dtd
       cls: DTD
-      is_call: true
-    - obj: schema
-      cls: XMLSchema
-      is_call: true
-    - obj: rng
-      cls: RelaxNG
-      is_call: false
-    - obj: dtd
-      cls: DTD
       is_call: false
     - obj: schema
       cls: XMLSchema
+      is_call: true
+    - obj: tron
+      cls: Schematron
       is_call: false
   main: |
-    from lxml import etree
-    rng: etree.RelaxNG
-    dtd: etree.DTD
-    schema: etree.XMLSchema
-    tree: etree._ElementTree[etree._Element]
+    from inc import rng, dtd, schema, tron, tree, elem
     {{ obj }}{{^is_call}}.validate{{/is_call}}()  # E: Missing positional argument "etree" in call to {{#is_call}}"__call__" of "{{cls}}"{{/is_call}}{{^is_call}}"validate" of "_Validator"{{/is_call}}  [call-arg]
     {{ obj }}{{^is_call}}.validate{{/is_call}}(None)  # E: Argument 1 to {{#is_call}}"__call__" of "{{cls}}"{{/is_call}}{{^is_call}}"validate" of "_Validator"{{/is_call}} has incompatible type "None"; expected "Union[_Element, _ElementTree[_Element]]"  [arg-type]
     {{ obj }}{{^is_call}}.validate{{/is_call}}(tree, None)  # E: Too many arguments for {{#is_call}}"__call__" of "{{cls}}"{{/is_call}}{{^is_call}}"validate" of "_Validator"{{/is_call}}  [call-arg]
     {{ obj }}{{^is_call}}.validate{{/is_call}}(badarg=tree)  # E: Unexpected keyword argument "badarg" for {{#is_call}}"__call__" of "{{cls}}"{{/is_call}}{{^is_call}}"validate" of "_Validator"{{/is_call}}  [call-arg]
 
 - case: superclass_other_methods
+  files: *INC
   parametrized:
     - obj: rng
     - obj: dtd
     - obj: schema
+    - obj: tron
   main: |
-    from lxml import etree
-    rng: etree.RelaxNG
-    dtd: etree.DTD
-    schema: etree.XMLSchema
-    tree: etree._ElementTree[etree._Element]
+    from inc import rng, dtd, schema, tron, tree, elem
     reveal_type({{ obj }}.error_log)  # NR: .+ "[\w\.]+\._ListErrorLog"
     _ = {{ obj }}.assertValid(tree)  # E: "assertValid" of "_Validator" does not return a value  [func-returns-value]
-    _ = {{ obj }}.assert_(tree.getroot())  # E: "assert_" of "_Validator" does not return a value  [func-returns-value]
+    _ = {{ obj }}.assert_(elem)  # E: "assert_" of "_Validator" does not return a value  [func-returns-value]
